--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,6 @@
   }
   body {
     @apply bg-background text-foreground;
-
     font-synthesis-weight: none;
     text-rendering: optimizeLegibility;
   }
@@ -21,7 +20,12 @@
   .step {
     counter-increment: step;
   }
-
+  .subtext {
+    @apply text-3xl  font-bold;
+  }
+  .heading {
+    @apply text-5xl font-extrabold;
+  }
   .step:before {
     @apply absolute w-9 h-9 bg-muted rounded-full font-mono font-medium text-center text-base inline-flex items-center justify-center -indent-px border-4 border-background;
     @apply ml-[-50px] mt-[-4px];
