added new files

--- a/app/globals.css
+++ b/app/globals.css
@@ -58,3 +58,9 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+.jWkLDY {
+  font-size: 20px;
+}
+.jWkLDY .file-types {
+  font-size: 20px;
+}
